--- a/x86_64-unknown-arceos.json
+++ b/x86_64-unknown-arceos.json
@@ -11,7 +11,7 @@
   "max-atomic-width": 64,
   "os": "arceos",
   "panic-strategy": "abort",
-  "position-independent-executables": true,
+  "position-independent-executables": false,
   "pre-link-args": {
     "ld": [
       "--build-id",
