--- a/libos/Cargo.toml
+++ b/libos/Cargo.toml
@@ -10,6 +10,8 @@ name = "os"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bitflags = "2.0"
+spinlock = { path = "../crates/spinlock" }
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 x86 = "0.52"
